# bc-trail

./: .gitignore  CMakeLists.txt  README.md  prompt.txt
include/: control_loop.h  fsm_controller.h  gimbal_controller.h  joystick_interface.h  main_window.h  tracker_interface.h
resources/: bc-trail.qrc
src/: control_loop.cpp  fsm_controller.cpp  gimbal_controller.cpp  joystick_interface.cpp  main.cpp  main_window.cpp  tracker_interface.cpp
ui/: main_window.ui
